[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MpApi.aio"
authors = [{name = "Maurice Mengel", email = "mauricemengel@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
keywords = ["museum", "museumPlus", "api client", "asynchronous"]
dependencies = [
	"flit",
    "lxml >=4.8.0",    # pathlike objects
    "aiohttp >=3.8.5", # current version as per time of development
	"yarl"
]
[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
]

[project.scripts]
monk = 'MpApi.aio:monk'
